    the call_cleanup/2 built-in predicate with calls to the more reliable
    setup_call_cleanup/3 built-in predicate. This change requires recent
    versions of SWI-Prolog, XSB, and YAP when writing multi-threading code.

    Corrected a bug in the Logtalk runtime when printing a compatibility
    warning regarding the back-end Prolog compiler version being used.

    Added a monitor/1 predicate to the library event registry objects.
    Updated the definition of the monitors/1 and monitored/1 predicates
    in order to avoid using the non-standard predicate sort/2.

    Added support for adding the Logtalk mime-type to systems supporting
    the freedesktop.org shared mime-info database.

    Added support for adding the Logtalk mime-type and the file description
    for Logtalk source files to the Windows installer.

    Updated the RPM spec file and build script to no longer require root
    access. The RPM package built from these files is no longer relocatable.

    Updated the POSIX (un)install shell scripts to print the version number
    of the Logtalk release being (un)installed.


2.37.4 - September 18, 2009

    Updated the Logtalk compiler to expand calls to the forall/2 and once/1
    built-in predicates in order to improve performance.

    Corrected a bug in the Logtalk compiler that resulted in some calls to the
    built-in predicate call/1 being transparent to cuts in its goal argument.

    Updated the Logtalk runtime to try to detect and warn about incompatible
    back-end Prolog compiler versions.

    Updated the Logtalk runtime to avoid spurious type errors when working
    with parametric objects using ECLiPSe due to the weak ISO Prolog standard
    compliance of this compiler.

    Added two new commands to the Logtalk built-in debugger for writing the
    current goal as a quoted term and for removing context spy points at
    leashed ports.

    Added a logtalk_library_path/2 entry for the library "home" (the user home