@@ -23,6 +23,9 @@ RELEASE NOTES
     Corrected a bug in the Logtalk runtime when printing a compatibility
     warning regarding the back-end Prolog compiler version being used.
 
+    Corrected a bug in the implementation of the :/1 control construct when
+    only some of the imported categories are compiled for static binding.
+
     Added a monitor/1 predicate to the library event registry objects.
     Updated the definition of the monitors/1 and monitored/1 predicates
     in order to avoid using the non-standard predicate sort/2.
